Update and rename _creditos.html to creditos.html

--- a/creditos.html
+++ b/creditos.html
@@ -37,7 +37,7 @@
    </ul>
    </li>
    <li><a href="anexos.html" class="no-ch">📑Anexos</a></li>
-   <li id="active"><a href="_creditos.html" class="active no-ch">🪪 Creditos</a></li>
+   <li id="active"><a href="creditos.html" class="active no-ch">🪪 Creditos</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
