--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
    </ul>
    </li>
    <li><a href="anexos.html" class="no-ch">📑Anexos</a></li>
-   <li><a href="_creditos.html" class="no-ch">🪪 Creditos</a></li>
+   <li><a href="creditos.html" class="no-ch">🪪 Creditos</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
