Update and rename _descripcin_del_proyecto.html to descripcin_del_proyecto.html

--- a/descripcin_del_proyecto.html
+++ b/descripcin_del_proyecto.html
@@ -25,7 +25,7 @@
    <li><a href="index.html" class="daddy main-node">🏠Inicio</a></li>
    <li><a href="ndice.html" class="no-ch">📓Índice</a></li>
    <li><a href="introduccin.html" class="no-ch">📖Introducción</a></li>
-   <li id="active"><a href="_descripcin_del_proyecto.html" class="active no-ch">📝 Descripción del Proyecto</a></li>
+   <li id="active"><a href="descripcin_del_proyecto.html" class="active no-ch">📝 Descripción del Proyecto</a></li>
    <li><a href="recursos.html" class="no-ch">📚Recursos</a></li>
    <li><a href="desarrollo_del_proyecto.html" class="daddy">🛠️Desarrollo del proyecto</a>
    <ul class="other-section">
