--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
    <li id="active"><a href="index.html" class="active daddy main-node">🏠Inicio</a></li>
    <li><a href="ndice.html" class="no-ch">📓Índice</a></li>
    <li><a href="introduccin.html" class="no-ch">📖Introducción</a></li>
-   <li><a href="_descripcin_del_proyecto.html" class="no-ch">📝 Descripción del Proyecto</a></li>
+   <li><a href="descripcin_del_proyecto.html" class="no-ch">📝 Descripción del Proyecto</a></li>
    <li><a href="recursos.html" class="no-ch">📚Recursos</a></li>
    <li><a href="desarrollo_del_proyecto.html" class="daddy">🛠️Desarrollo del proyecto</a>
    <ul class="other-section">
