--- a/ndice.html
+++ b/ndice.html
@@ -25,7 +25,7 @@
    <li><a href="index.html" class="daddy main-node">🏠Inicio</a></li>
    <li id="active"><a href="ndice.html" class="active no-ch">📓Índice</a></li>
    <li><a href="introduccin.html" class="no-ch">📖Introducción</a></li>
-   <li><a href="_descripcin_del_proyecto.html" class="no-ch">📝 Descripción del Proyecto</a></li>
+   <li><a href="descripcin_del_proyecto.html" class="no-ch">📝 Descripción del Proyecto</a></li>
    <li><a href="recursos.html" class="no-ch">📚Recursos</a></li>
    <li><a href="desarrollo_del_proyecto.html" class="daddy">🛠️Desarrollo del proyecto</a>
    <ul class="other-section">
@@ -54,7 +54,7 @@
 <div class="iDevice_content_wrapper">
 <div id="ta28_127_2" class="block iDevice_content">
 <div class="exe-text"><p style="text-align: center;"><a href="introduccin.html">📖INTRODUCCIÓN </a></p>
-<p style="text-align: center;"><a href="_descripcin_del_proyecto.html">📝DESCRIPCIÓN DEL PROYECTO </a></p>
+<p style="text-align: center;"><a href="descripcin_del_proyecto.html">📝DESCRIPCIÓN DEL PROYECTO </a></p>
 <p style="text-align: center;"><a href="recursos.html">📚RECURSOS </a></p>
 <p style="text-align: center;"><a href="desarrollo_del_proyecto.html">🛠️DESARROLLO DEL PROYECTO</a></p>
 <p style="text-align: center;"><a href="anexos.html">📑ANEXOS </a></p></div>
