--- a/semana_2.html
+++ b/semana_2.html
@@ -97,7 +97,7 @@
 <tr>
 <td style="width: 33.3333%;"><img src="img4.png" width="394" height="144" alt="1.mj" /></td>
 <td style="width: 33.3333%;"><img src="img6.png" /></td>
-<td style="width: 33.3333%;"><img src="img6.png" width="394" height="346" alt="4.mj" /></td>
+<td style="width: 33.3333%;"><img src="Captura_de_pantalla_2025-02-11_075755.png" width="394" height="346" alt="imj2" /></td>
 </tr>
 <tr>
 <td style="width: 33.3333%;"><img src="img7.png" width="394" height="212" alt="5.mj" /></td>
